# chopper-autotune

./: .gitignore  README.md  README_RU.md  analyze.sh  belts.sh  chopper_autotune.cfg  collect.sh  current.sh  demo.sh  envelope.sh  extruder.sh  find_speed.sh  install.sh  map.sh  pyproject.toml  restore.sh  run.sh  save.sh  status.sh  stop.sh  tune.sh  uninstall.sh
.github/workflows/: ci.yml
chopper_autotune/: analyze.py  belts.py  cli.py  collect.py  current.py  dataset.py  demo.py  envelope.py  extruder.py  find_speed.py  klippy.py  metrics.py  moonraker.py  resonance_map.py  search.py  tmc.py  tune.py
docs/: CHRONICLE.md  CHRONICLE_RU.md  SCIENCE.md  SCIENCE_RU.md
klipperscreen/: chopper.py
tests/: test_belts.py  test_cli.py  test_collect_guards.py  test_compare.py  test_current.py  test_dataset.py  test_demo.py  test_envelope.py  test_extruder.py  test_find_speed.py  test_klippy.py  test_metrics.py  test_plan.py  test_report.py  test_resonance_map.py  test_save.py  test_search.py  test_spreadcycle_status.py  test_tmc.py  test_tune.py  test_validate.py
