[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "chopper-autotune"
version = "0.2.0"
description = "Measurement-driven auto-tuning of TMC chopper registers for Klipper"
readme = "README.md"
license = { file = "LICENSE.TXT" }
requires-python = ">=3.9"
dependencies = ["numpy", "plotly"]

[project.urls]
Homepage = "https://github.com/anton-vinogradov/chopper-autotune"

[project.scripts]
chopper-autotune = "chopper_autotune.cli:main"

[tool.setuptools]
packages = ["chopper_autotune"]
