[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "chopper-autotune"
version = "0.3.0"
description = "Measurement-driven auto-tuning of TMC chopper registers for Klipper"
readme = "README.md"
license = { file = "LICENSE.TXT" }
requires-python = ">=3.9"
# numpy>=1.23: older loadtxt falls back to a pure-python parser — 10-20s per 13MB
# belt capture on a Pi with the distro numpy leaking through --system-site-packages
dependencies = ["numpy>=1.23", "plotly"]

[project.urls]
Homepage = "https://github.com/anton-vinogradov/chopper-autotune"

[project.scripts]
chopper-autotune = "chopper_autotune.cli:main"

[tool.setuptools]
packages = ["chopper_autotune"]
